[package]
name = "rs-kernel"
version = "0.1.0"
authors = ["Jonathan Pentecost <pentecostjonathan@gmail.com>"]

[dependencies]
spin = "0.4.6"
volatile = "0.2.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[package.metadata.bootimage]
default-target = "x64_kernel"
